@@ -5,6 +5,7 @@ $Id$
 	configure.ac: Remove snprintf() compile time test.
 	Add '--with-working-snprintf' configure option.
 	Add __USE_MINGW_ANSI_STDIO test for MinGW GCC.
+	utility.cpp: Add snprintf() runtime test.
 
 2014-06-30  Christian Franke  <franke@computer.org>
 
